tests/fixtures/invalid/set_pow_set.py
# Cannot power Set[int] and Set[int]
x: set[int] = {1, 2, 3} ** {1, 2, 3}
